<resources>
    <string name="app_name">TukTuk</string>
    <string name="tag_login">tag_login</string>
    <string name="tag_login_password">tag_login_password</string>
    <string name="tag_enter_otp">tag_enter_otp</string>
    <string name="no_record">No Record Found</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="tag_enter_otp_automatic">MapActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="driver_licence">Driver Licence</string>
    <string name="driver_photo">Driver Photo</string>
    <string name="passbook">Passbook</string>
    <string name="rc">RC</string>
    <string name="submit">Submit</string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_sign_up">Login / Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="vehicle_status">Vehicle Status</string>
    <string name="search">Search</string>
    <string name="where_to">Where to ?</string>
    <string name="referral_code">Referral Code</string>
  <!--  <string name="google_key">AIzaSyCpLEw7VrBe8-sioTwlsZ7to57lkGWzVH0</string> -->
    <string name="google_key">AIzaSyALohi13jm_L3KvhjGWfUvXf7V6hcC3jOI</string>


<string-array name="DriverDetailArray">
    <item>First Name</item>
    <item>Last Name</item>
    <item>Email</item>
    <item>City</item>
    <item>Password</item>
</string-array>


</resources>


